[package]
name = "embedded-recruitment-task"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
env_logger = "0.11.6"
log = "0.4.2"
prost = "0.13.4"
prost-types = "0.13.4"
rand = "0.8.5"
tokio = "0.1"
[build-dependencies]
prost-build = "0.13.4"

[dev-dependencies]
pretty_assertions = "1.4.1"
